# app/Http/Resources/SiteResource.php
@@ -14,6 +14,30 @@ class SiteResource extends JsonResource
      */
     public function toArray($request)
     {
-        return parent::toArray($request);
+        $attribs = $this->getAttributes();
+        $relations = $this->getRelations();
+        $return = array_merge($attribs,$relations);
+        //$return = $this;
+
+        $attributes = [
+            'servicenowlocation',
+            'rooms',
+            'contact911',
+            'scopes',
+        ];
+
+        foreach($attributes as $attribute)
+        {
+            if($request->has($attribute))
+            {
+                $value = $this->$attribute;
+                if($value)
+                {
+                    $return[$attribute] = $value;
+                }
+            }
+        }
+
+        return $return;
     }
 }
